--- a/Школа.md
+++ b/Школа.md
@@ -1,8 +1,8 @@
-1-ый класс
+# 1-ый класс
 
-Руководство родителям в рамках знакомства школьников с учебным порядком
+## Руководство родителям в рамках знакомства школьников с учебным порядком
 
-Рекомендации родителям при дежурстве на основном уроке
+### Рекомендации родителям при дежурстве на основном уроке
 - помогать направлять внимание школьников
 -- во время выполнения задания акцентировать внимание школьников на задании если они переключаются друг на друга
 -- задавать вопросы о том как получаетя задание 
