--- a/Школа.md
+++ b/Школа.md
@@ -1,3 +1,16 @@
+# Общие правила
+## В раздевалке
+
+- Сухие перчатки и Шапки - в рукав.
+- Мокрые перчатки и шапки на стойку сушилку при входе
+- На подоконнике никаких вещей быть не должно
+- При входе ребята снимают Обувь и ставят под лавку на чёрные подстилки
+- На лавках могут стоять портфели классов которые вне школы, остальные - внутрь
+- На лавках ничего из одежды быть не должно
+Начинаем с 8-45 до начала круга.
+После начала круга - собрать с лавок и подоконника вещи и принести раздать на круге)
+Ещё важно как это делать - весело, с шуткой и доброжелательно)
+
 # 1-ый класс
 
 ## Руководство родителям в рамках знакомства школьников с учебным порядком
