--- a/Доставка.md
+++ b/Доставка.md
@@ -11,5 +11,6 @@
 Иваньково https://russianpost.su/tulskaya/ivankovo_tulskaya_oblast/301040
 Заранее оформите получение по СМС, тогда любой человек сможет получить за вас, получив от вас код подтверждения.
 
-
+*ВкусВилл*
+Если вы хотите попросить заказать что-то из ВкусВилл, то при количестве товара более 2 лучше делать заказ через приложение на самовывоз.
 
