--- a/Доставка.md
+++ b/Доставка.md
@@ -1,7 +1,14 @@
-**Общие соображения и нюансы доставки
+**Общие соображения и нюансы доставки**
 
 
 Если вы хотели бы попросить кого-то привезти посылку вам
+
+*Деловые линии*
+При получении оплаченной посылки в ДЛ необходимо предоставить документ тому лицу на которого, оформлена посылка. https://www.dellin.ru/info/receiving-documents/
+(Информация на проверке) Также при отправке с опцией Упрощенная отправка (с указанием телефона получателя, без указания документа получателя) возможно получение любым физическим лицом, получившим код из СМС отправленным на указанный в документах номер.
+
+*СДЭК*
+При получении посылки в СДЭК необходимо предоставить документы получателя, поэтому либо сам получатель либо представитель с фотографией документа на телефоне.
 
 *Ozon, WB или СДЭК в Ступино*
 лучше на Чайковского 58 - они там все рядом и удобно заехать забрать пачку.
@@ -10,7 +17,9 @@
 *Почта России*
 Иваньково https://russianpost.su/tulskaya/ivankovo_tulskaya_oblast/301040
 Заранее оформите получение по СМС, тогда любой человек сможет получить за вас, получив от вас код подтверждения.
+Крайне желательно оценить на 5 звезд работу Иваньковского отделения в приложении Почта России.
 
 *ВкусВилл*
 Если вы хотите попросить заказать что-то из ВкусВилл, то при количестве товара более 2 лучше делать заказ через приложение на самовывоз.
+В Ступино лучше всего делать заказ на Андропова 73/16 - это ближе к выходу.
 
